# propermab-condaless

./: .gitignore  README.md  pyproject.toml
propermab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
propermab/plot/: protein.py
