[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propermab"
version = "0.1.0"
description = "Tools for calculating molecular features of proteins with a focus on mAbs."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "openmm",
    "pdbfixer",
    "anarci",
    "scipy>=1.6",
    "biopython>=1.80",
    "py3dmol",
    "matplotlib>=3.5",
    "numba>=0.50",
    "pdb2pqr",
    "immunebuilder>=0.0.5,<=0.0.8",
    "freesasa>=2.2.0",
    "open3d",
    "plyfile",
    "meshio",
    "fair-esm",
    "antiberty",
    "networkx",
    "scikit-learn",
    "numpy",
    "pandas",
    "requests",
    "ipython>=8.38.0",
]

[project.optional-dependencies]
cuda = ["OpenMM-CUDA-12"]

[tool.setuptools.packages.find]
include = ["propermab*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
